[metadata]
name = "line_up"
version = "0.3.0"
description = "A tool that lines up two or more images with some spatial overlap matching common points on them."
authors = [{ name = "Jose Gómez-Dans", email = "jose.gomez-dans@kcl.ac.uk" }]
license = { file = "LICENSE" }
url = https://github.com/jgomezdans/line_up_stitcher
readme = "README.md"
dependencies = ["numpy>=1.21", "opencv-python>=4.5"]

[options]
packages = find:
install_requires =
    numpy>=1.26
    opencv-python>=4.9
python_requires = >=3.11

[options.entry_points]
console_scripts =
    line_up = line_up.main:main

[tool.ruff]
line-length = 79

